before reinstall